# tyme-server

./: .dockerignore  .gitignore  Cargo.toml  DockerFile  Dockerfile  README.md  SysConfig.toml  SysConig.toml  config.toml  config.toml1
.cargo/: config.toml
cron_task/: Cargo.toml
cron_task/src/: lib.rs
data/: db  snap.000000000000096A  snap.0000000000018E32
migrations/: 20240327143414_DB.sql  20240329063646_tyme.down.sql  20240329063646_tyme.up.sql
old/: db.rs
scrcpy/: os.lua  sys.lua  test.lua
script/: os.lua  sys.lua  test.lua  test1.lua  tyme_sys.lua
src/: args.rs  async_subscribe_v5.rs  clint.rs  config.rs  db.rs  header.rs  main.rs  message.rs  mqtt.rs  r_db.rs  s_db.rs  ssl_publish.rs  subscribe.rs  task.rs  task_2.rs
src/web_console/: mod.rs  mut_s.rs  services.rs  store.rs
src/web_console/middlewares/: authenticator.rs  guidesecure.rs  mod.rs  usersecure.rs
src/web_console/routes/: api.rs  auth.rs  chat.rs  file.rs  mod.rs  session.rs  sys.rs  task.rs
ssl/: emqxsl-ca - 副本.crt
templates/: msg.html
tyme-console/: index.html  jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
tyme-console/src/: App.svelte  Start.svelte  app.postcss  main.js  markdown.postcss
tyme-console/src/js/: auth.js  fetch.js  request.js  socket.js  storage.js  store.js
tyme-console/src/lib/: ChatCard.svelte  ChatItem.svelte  ChatList.svelte  ConsoleSetting.svelte  DbSetting.svelte  Editor.svelte  EditorSwitch.svelte  MarkDownCard.svelte  Modal.svelte  MqttSetting.svelte  Navbar.svelte  Task.svelte  Toasts.svelte  Topic.svelte
tyme-console/src/pages/: About.svelte  ApiCheck.svelte  Chat.svelte  Guide.svelte  Login.svelte  Logout.svelte  Secure.svelte  Settings.svelte  Task.svelte  Tasks.svelte  TasksTable.svelte
