[package]
name = "tyme-server"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.12"
env_logger = "*"
futures = "0.3"
futures-timer = "3.0"
tokio = { version = "1", features = ["full"] }
anyhow = "*"
lazy_static = "*"
parking_lot = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml_edit = { version = "0.21", features = ["serde"] }
axum = { version = "0.6", features = ["ws", "headers"] }
nanoid = "0.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tower-sessions = "0.4.1"
tokio-util = { version = "0.7", features = ["io"] }
markdown = "1.0.0-alpha.14"
headers = "0.3"
sled = "0.34"
rocksdb = "0.21.0"
bincode = "1"
zerocopy = "0.7"
zerocopy-derive = "0.7"


[dev-dependencies]
axum-macros = "*"
