[package]
name = "tyme-server"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.12"
futures = "0.3"
flexi_logger = "0.27"
log = "0.4"
futures-timer = "3.0"
tokio = { version = "1", features = ["full"] }
anyhow = "*"
lazy_static = "*"
parking_lot = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml_edit = { version = "0.21", features = ["serde"] }
axum = { version = "0.6", features = ["ws", "headers"] }
nanoid = "0.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tower-sessions = "0.4.1"
tokio-util = { version = "0.7", features = ["io"] }
markdown = "1.0.0-alpha.14"
headers = "0.3"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
bincode = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "*"
mime = "0.3.17"
cron_task = {path = "./cron_task"}
cron = "0.12.0"
chrono = "0.4.31"


[dev-dependencies]
axum-macros = "*"
