[package]
name = "tyme-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
flexi_logger = "0.27"
log = "0.4"
futures-timer = "3.0"
tokio = { version = "1", features = ["full"] }
anyhow = "*"
lazy_static = "*"
parking_lot = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml_edit = { version = "0.21", features = ["serde"] }
axum = { version = "0.6", features = ["ws", "headers"] }
hyper = { version = "0.14", features = ["full"] }
nanoid = "0.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tower-sessions = "0.4.1"
tokio-util = { version = "0.7", features = ["io"] }
markdown = "1.0.0-alpha.14"
headers = "0.3"
bincode = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "*"
mime = "0.3.17"
cron = "0.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
mlua = { version = "0.9.4", features = [
    "lua54",
    "vendored",
    "async",
    "serialize",
    "parking_lot",
    "send",
] }
linked-hash-map = "0.5.6"
structopt = "0.3"
dirs = "5"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "any",
    "mysql",
    "sqlite",
    "macros",
    "chrono",
] }

[target.x86_64-pc-windows-msvc.dependencies]
paho-mqtt = "0.12"

#x86_64-unknown-linux-musl
[target.x86_64-unknown-linux-musl.dependencies]
paho-mqtt = { version = "0.12", features = ["vendored-ssl", "bundled"] }


[dev-dependencies]
axum-macros = "*"
